<!--
     Copyright (C) 2022 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name">FLEDGE Demo</string>
  <string name="app_description">Sample app for FLEDGE API</string>
  <string name="ad_space_text">Space for ad</string>
  <string name="buyer_bidding_hint">https://buyer-js-url.example.com</string>
  <string name="seller_scoring_hint">https://seller-js-url.example.com</string>
  <string name="event_log_text">Event Log</string>
  <string name="run_ads_button_text">Run Ad Selection</string>
  <string name="override_switch_text">Use Remote Overrides</string>
  <string name="app_install_switch_text">Set App Install Advertisers</string>
  <string name="contextual_ad_switch_text">Contextual Ad</string>
  <string name="contextual_ad_ai_switch_text">Contextual ad with app install filter for package:</string>
  <string name="app_install_switch_on">ON</string>
  <string name="app_install_switch_off">OFF</string>
  <string name="override_off">OFF</string>
  <string name="override_v2_bidding_logic">V2 Bidding Logic</string>
  <string name="override_v3_bidding_logic">V3 Bidding Logic</string>
  <string name="ca_switch_on">JOINED</string>
  <string name="ca_switch_off">LEFT</string>
  <string name="ca_switch_shoes_text">Join Shoes CA</string>
  <string name="ca_switch_shirts_text">Join Shirts CA</string>
  <string name="ca_switch_short_expiry_text">Join CA with short expiry</string>
  <string name="ca_switch_invalid_fields_text">Join CA with invalid fields</string>
  <string name="app_install_ca_switch_text">Join CA with app install filter for package:</string>
  <string name="edit_text_interaction_data_input_hint">interactionData</string>
  <string name="report_click_button_text">Report Click</string>
  <string name="freq_cap_ca_switch_text">Join CA with frequency capping</string>
  <string name="edit_text_ad_selection_input_hint">adSelectionId</string>
  <string name="report_impression_button_text">Report Impression</string>
  <string name="update_ad_counter_histogram_button_text">Update Click Hist</string>
  <string name="network_a_text">Network A\n(buyer: Nike)</string>
  <string name="network_a_buyer">Nike</string>
  <string name="network_bid_hint">Bid</string>
  <string name="network_bid_floor_hint">Bid Floor</string>
  <string name="network_b_text">Network B\n(buyer: Adidas)</string>
  <string name="network_c_text">Network C\n(buyer: Puma)</string>
  <string name="network_1p_text">Mediation Network\n(buyer: Sketchers)</string>
  <string name="run_waterfall_mediation_button_text">Run Waterfall Mediation</string>
  <string name="include_text">Additional Ad Selection Ids:</string>
  <string name="ad_selection_ids_to_include_hint">Comma separated ids</string>
  <string name="no_ad_found">"No ad is found!"</string>
  <string name="edit_text_package_name_hint">package name</string>
  <string name="fetch_and_join_ca_text">Fetch and Join Hats CA</string>
</resources>