<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".WaterfallMediationActivity">
  <TextView
      android:id="@+id/ad_space"
      android:layout_width="match_parent"
      android:layout_weight=".07"
      android:layout_height="0dp"
      android:layout_marginTop="18dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:background="@color/purple_200"
      android:text="@string/ad_space_text"
      android:textColor="#311B92"
      android:importantForAutofill="no" />
  <TextView
      android:id="@+id/event_log"
      android:layout_width="match_parent"
      android:layout_weight=".40"
      android:layout_height="0dp"
      android:layout_marginTop="5dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:text="@string/event_log_text"
      android:scrollbars = "vertical"
      android:textIsSelectable="true"
      android:importantForAutofill="no" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight=".05"
      android:layout_height="0dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:gravity="center"
      android:orientation="horizontal"
      android:importantForAutofill="no">
    <TextView
        android:id="@+id/ignore_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33" />
    <TextView
        android:id="@+id/ignore_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight=".33"
        android:hint="@string/network_bid_hint"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <TextView
        android:id="@+id/ignore_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight=".33"
        android:hint="@string/network_bid_floor_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        tools:ignore="DuplicateSpeakableTextCheck" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight=".08"
      android:layout_height="0dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:gravity="center"
      android:orientation="horizontal"
      android:importantForAutofill="no">
    <TextView
        android:id="@+id/network_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:text="@string/network_a_text" />
    <EditText
        android:id="@+id/network_a_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:hint="@string/network_bid_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <EditText
        android:id="@+id/network_a_bid_floor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:hint="@string/network_bid_floor_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        tools:ignore="DuplicateSpeakableTextCheck" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight=".08"
      android:layout_height="0dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:gravity="center"
      android:orientation="horizontal">
    <TextView
        android:id="@+id/network_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:text="@string/network_b_text" />
    <EditText
        android:id="@+id/network_b_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:hint="@string/network_bid_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/network_b_bid_floor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:hint="@string/network_bid_floor_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight=".08"
      android:layout_height="0dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:gravity="center"
      android:orientation="horizontal">
    <TextView
        android:id="@+id/network_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:text="@string/network_c_text" />
    <EditText
        android:id="@+id/network_c_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:hint="@string/network_bid_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/network_c_bid_floor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:hint="@string/network_bid_floor_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight=".08"
      android:layout_height="0dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:gravity="center"
      android:orientation="horizontal">
    <TextView
        android:id="@+id/network_1p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/network_1p_text" />
    <EditText
        android:id="@+id/network_1p_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/network_bid_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_weight=".08"
      android:layout_height="0dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:gravity="center"
      android:orientation="horizontal">
    <TextView
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:text="@string/include_text" />
    <EditText
        android:id="@+id/ad_selection_ids_to_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:hint="@string/ad_selection_ids_to_include_hint"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no" />
  </LinearLayout>
  <Button
      android:id="@+id/run_waterfall_mediation_button"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight=".08"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="5dp"
      android:layout_marginBottom="5dp"
      android:text="@string/run_waterfall_mediation_button_text" />
</LinearLayout>